--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 chardet==5.2.0
 click==8.2.1
 colorama==0.4.6
+et_xmlfile==2.0.0
 Flask==3.1.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
@@ -11,6 +12,8 @@ MarkupSafe==3.0.2
 mysql-connector==2.2.9
 numpy==2.3.1
 olefile==0.47
+openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -18,5 +21,6 @@ six==1.17.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
 tzdata==2025.2
+waitress==3.0.2
 Werkzeug==3.1.3
 xlrd==2.0.2
